Update Delete func
